--- a/src/sass/clusters/_header.scss
+++ b/src/sass/clusters/_header.scss
@@ -19,6 +19,15 @@ header {
         display: flex;
         align-items: center;
     }
+
+    h1 {
+        font-weight: 200;
+        align-self: center;
+        justify-self: flex-end;
+        @include break-at("medium") {
+            display: none;
+        }
+    }
 }
 
 #eg-logo {
