--- a/src/sass/components/_text-couple.scss
+++ b/src/sass/components/_text-couple.scss
@@ -21,4 +21,7 @@
             color: var(--text-bright);
         }
     }
+    a {
+        color: var(--text-basic);
+    }
 }
